--- a/service/configs/server.conf
+++ b/service/configs/server.conf
@@ -3,6 +3,14 @@ server {
     listen  [::]:80;
     server_name  localhost;
 
+    listen 443 ssl;
+    server_name www.hyeonghwan-kubernetes.com;
+
+    ssl_certificate tls/https.cert;
+    ssl_certificate_key tls/https.key;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     access_log  /var/log/nginx/host.access.log  main;
 
     location / {
@@ -10,7 +18,6 @@ server {
         index  index.html index.htm;
     }
 
-    # 여기 주목!! 
     location /myapp {
         proxy_pass http://my-app:8080/;
     }
@@ -20,3 +27,5 @@ server {
         root   /usr/share/nginx/html;
     }
 }
+
+
